# deals

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  package-lock.json  pyproject.toml  requirements.txt  run_worker.py  vercel.json
.claude/: settings.local.json
api/: __init__.py  main.py  models.py
api/jobs/: __init__.py  handlers.py  worker.py
api/routes/: analysis.py  comps.py  contacts.py  deals.py  financing.py  financing_desk.py  import_property.py  jobs.py  markets.py  neighborhood.py  pipeline.py  properties.py  risk.py  saved.py
config/: markets.yaml  strategies.yaml
docs/: RAPIDAPI_RESEARCH_REPORT.md  SPEC-streamline-deals-flow.md
electron/: README.md  main.js  package-lock.json  package.json  preload.js  scraper.js
scripts/: cleanup_test_data.py
src/: __init__.py  cli.py
src/agents/: __init__.py  base.py  deal_analyzer.py  due_diligence.py  market_research.py  pipeline.py
src/analysis/: __init__.py  ranking.py  sensitivity.py
src/data_sources/: __init__.py  aggregator.py  bls.py  census.py  fema_flood.py  fred.py  geocoder.py  hud_fmr.py  income_data.py  metros.py  redfin.py  rentcast.py  state_data.py  url_parser.py  us_real_estate.py  walkscore.py
tests/: __init__.py  conftest.py  test_agents.py  test_analysis.py  test_api_routes.py  test_cache.py  test_contacts.py  test_data_sources.py  test_financing.py  test_integration.py  test_models.py  test_pipeline.py  test_repository.py  test_scoring.py
web/: Dockerfile  fly.toml  next.config.js  package-lock.json  package.json
(+53 files in other folders)
